stuff/lab/configs/istio/ingress1.yaml
#	Copyright 2018, Google, Inc.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway-asip
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 3000
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: asip
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway-asip
  http:
  - route:
    - destination:
        host: asip
        port:
          number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: asip
  labels:
    app: asip
spec:
  selector:
    app: asip
  ports:
  - port: 80
    targetPort: 3000
    name: http
  - port: 9464
    targetPort: 9464
    name: prometheus
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: asip
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway-asip
  http:
  - route:
    - destination:
        host: asip
